[gd_scene load_steps=4 format=3 uid="uid://85pp5fdytht4"]

[ext_resource type="AudioStream" uid="uid://ceopx2r6dgrr8" path="res://assets/audio/sfx/ButtonHover.wav" id="1_7v4p8"]
[ext_resource type="Script" path="res://scenes/Audio/SfxComponent.gd" id="1_g4d17"]
[ext_resource type="AudioStream" uid="uid://dh402pnf46dnd" path="res://assets/audio/sfx/ButtonClick.wav" id="2_ilh70"]

[node name="SfxComponent" type="AudioStreamPlayer"]
script = ExtResource("1_g4d17")

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_7v4p8")
volume_db = -12.412
bus = &"SFX"

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_ilh70")
volume_db = -12.84
bus = &"SFX"
